--- a/ents/enrich/templates/base_generic.html
+++ b/ents/enrich/templates/base_generic.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <nav class="navbar navbar-expand-md sticky-top navbar-light bg-light">
       {% url 'index' as index_url %}
-      <a class="navbar-brand" href="{% url 'index' %}">Enrichment Items</a>
+      <a class="navbar-brand" href="{% url 'index' %}">&nbspEnrichment Items </a>
       <button
         class="navbar-toggler"
         type="button"
