--- a/ents/enrich/templates/items_dropdown_list_options.html
+++ b/ents/enrich/templates/items_dropdown_list_options.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
 {% for item in theItems %}
-<option value="{{ item.pk }}">{{ item.Name }}</option>
+<option value="{{ item.id }}">{{ item.name }}</option>
 {% endfor %}
