--- a/ents/ents/templates/createEnrichment.html
+++ b/ents/ents/templates/createEnrichment.html
@@ -1,4 +1,13 @@
+
+{% extends "base_generic.html" %} 
+
+{% block content %}
+
+<h1> Upload New Item</h1>
+
 <form method="post" enctype="multipart/form-data">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save">
 </form>
+
+{% endblock %}
