changed alt=Responsive Image to ...

--- a/ents/ents/templates/index.html
+++ b/ents/ents/templates/index.html
@@ -8,7 +8,7 @@
     <h1> Enrichment Items</h1>
     <p><br>Choose keywords to filter the list of items if desired,<br>then choose an item to see the photo.<br></p>
     {{ form.as_p }}
-    <img id="image-1" src="" class="img-fluid" alt="Responsive image" >
+    <img id="image-1" src="" class="img-fluid" alt="..." >
     {% comment %} <input type="submit" value="Submit"> {% endcomment %}
 
 
