--- a/ents/ents/templates/index.html
+++ b/ents/ents/templates/index.html
@@ -6,7 +6,7 @@
 <form action="{% url 'index' %}" method="post">
     {% csrf_token %}
     <h1> Enrichment Items</h1>
-    <p><br>Choose keywords to filter the list of items if desired,<br>then choose an item to see the photo.<br></p>
+    <p><br>Enter a search string if desired,<br>then tap outside the box to search.<br>Finally, choose an item to see the photo.<br></p>
     {{ form.as_p }}
     <img id="image-1" src="" class="img-fluid" alt="..." >
     {% comment %} <input type="submit" value="Submit"> {% endcomment %}
