--- a/ents/ents/templates/index.html
+++ b/ents/ents/templates/index.html
@@ -14,7 +14,29 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
-    $("#id_searchString").change(function () {
+
+    $("#id_doSearch").change(function () {
+      url = "{% url 'ajax_load_searchstring_items' %}"
+      
+      
+      var theDoSearch = this.checked;
+      var theSearchString = $("#id_searchString").val();
+
+      $.ajax({                       
+        url: url,                    
+        data: {
+          'theDoSearch': theDoSearch,
+          'theSearchString': theSearchString     
+        },
+        success: function (data) {   
+          $("#id_items").html(data);  
+        }
+      });
+
+
+    });
+
+    {% comment %} $("#id_searchString").change(function () {
       url = "{% url 'ajax_load_searchstring_items' %}"
       var theSearchString = $(this).val();  
 
@@ -24,12 +46,11 @@
           'theSearchString': theSearchString     
         },
         success: function (data) {   
-            {% comment %} console.log(data) {% endcomment %}
           $("#id_items").html(data);  
         }
       });
 
-    });
+    }); {% endcomment %}
 
 {% comment %} 
     $("#id_keywords").change(function () {
